syntax = "proto3";
import "calltree.proto";

package analytics;

enum SpanEventType {
  BEGIN = 0;
  END = 1;
}

message AsyncSpanEvent {
  SpanEventType event_type = 1;
  uint64 span_id = 2;
  uint32 scope_hash = 3;
  double time_ms = 4;
}

message BlockAsyncData {
  string block_id = 1;
  map<uint32, ScopeDesc> scopes = 2;
  repeated AsyncSpanEvent events = 3;
}